src/test/fail/lambdas/lambda_bad_token.lly
#[
SyntaxError: Unexpected token '}'.
Where: File "lambda_bad_token.lly" at line 6
]#

var v = {|| }
